--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hot Bloh",
+  "name": "Hot-Blog",
   "version": "0.0.0",
   "description": "Simples Sistema de Bloggin",
   "main": "app.js",
@@ -8,11 +8,12 @@
     "consolidate": "~0.9.1",
     "express": "~3.5",
     "mongodb": "~1.3.9",
-    "swig": "1.4.1", //~0.14.0
+    "swig": "1.4.1",
     "validator": "~1.1.3"
   },
   "devDependencies": {},
   "repository": "",
   "author": "Weslley Neri",
-  "license": "MIT",
+  "license": "MIT"
 }
+
